i18n/zh-Hans/docusaurus-plugin-content-docs/version-0.1.1/operations/staging.md
---
sidebar_position: 2
---

# 交互式暂存

逐个或批量审查并暂存更改。

## 导航
按 `2` 聚焦 **修改的文件** 面板。

## 快捷键

| 按键 | 动作 |
| :--- | :--- |
| `space` | 切换 暂存/取消暂存 |
| `ctrl+s` | 暂存所有 |
| `ctrl+u` | 取消暂存所有 |
| `r` | 解决冲突（仅用于冲突文件） |
| `d` | 丢弃更改 |
| `enter` | 查看差异 |

## 工作流

### 丢弃更改

丢弃更改包含安全检查，以防止意外数据丢失。

1.  **选择**: 高亮显示您想要丢弃的文件。
2.  **触发**: 按 `d`。
3.  **逻辑流程**:
    - **场景 A (简单)**: 文件仅在工作区或仅在暂存区有更改。
        - **弹窗**: "Confirm Discard" (确认丢弃)。
    - **场景 B (复杂)**: 文件在工作区和暂存区都有更改（部分暂存）。
        - **弹窗**: "Choose Discard Type" (选择丢弃类型 - 丢弃全部或丢弃未暂存)。
        - **后续**: 选择后出现确认弹窗。
4.  **确认**: 按 `enter` 确认。

---

### 解决合并冲突

当 Git 无法自动合并更改时（例如，拉取、合并分支或切换到有冲突的分支后），受影响的文件将在 **修改的文件** 面板中标记为冲突状态。

1.  **识别**: 冲突文件在文件列表中带有特殊指示符。
2.  **选择**: 高亮显示冲突文件。
3.  **触发**: 按 `r` 打开 **解决冲突** 选项弹窗。
4.  **选择解决策略**:
    - **重新开始文件合并**: 恢复文件中的冲突标记（丢弃已暂存的解决方案）。如果您想手动重新编辑冲突，请使用此选项。
    - **接受本地更改（ours）**: 保留当前分支的文件版本，丢弃传入的更改。
    - **接受传入更改（theirs）**: 接受另一个分支的文件版本，丢弃本地更改。
5.  **确认**: 按 `enter` 应用选定的解决策略。
6.  **审查**: 冲突已解决。您现在可以暂存并提交该文件。

:::tip
解决冲突后，务必使用 `enter` 查看文件差异，确保解决方案正确后再提交。
:::

---

### 查看差异

1.  **选择**: 高亮显示一个文件。
2.  **触发**: 按 `enter`。
3.  **结果**: **详细视图** (右侧面板) 更新显示差异。
    - **绿色**: 新增行。
    - **红色**: 删除行。
